// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ChannelValue Accepts style override 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
        "maxWidth": "100%",
      },
      undefined,
      {
        "backgroundColor": "red",
      },
    ]
  }
>
  <Text
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      [
        {
          "textAlign": "left",
        },
        {
          "color": "rgba(28, 27, 31, 1)",
          "writingDirection": "ltr",
        },
        [
          {
            "fontFamily": "System",
            "fontSize": 16,
            "fontWeight": "500",
            "letterSpacing": 0.15,
            "lineHeight": 24,
          },
          [
            {
              "color": "rgba(28, 27, 31, 1)",
              "fontFamily": "OpenSans-SemiBold",
              "fontSize": 16,
              "fontWeight": "600",
              "lineHeight": 20,
            },
          ],
        ],
      ]
    }
    testID="text-wrapper"
  >
    <Text
      style={
        [
          {
            "textAlign": "left",
          },
          {
            "color": "rgba(28, 27, 31, 1)",
            "writingDirection": "ltr",
          },
          [
            {
              "fontFamily": "System",
              "fontSize": 16,
              "fontWeight": "500",
              "letterSpacing": 0.15,
              "lineHeight": 24,
            },
            [
              {
                "color": "rgba(28, 27, 31, 1)",
                "fontFamily": "OpenSans-SemiBold",
                "fontSize": 16,
                "fontWeight": "600",
                "lineHeight": 20,
              },
              undefined,
            ],
          ],
        ]
      }
    >
      2
    </Text>
  </Text>
</View>
`;

exports[`ChannelValue ChannelValue Renders 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
        "maxWidth": "100%",
      },
      undefined,
      undefined,
    ]
  }
>
  <Text
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      [
        {
          "textAlign": "left",
        },
        {
          "color": "rgba(28, 27, 31, 1)",
          "writingDirection": "ltr",
        },
        [
          {
            "fontFamily": "System",
            "fontSize": 16,
            "fontWeight": "500",
            "letterSpacing": 0.15,
            "lineHeight": 24,
          },
          [
            {
              "color": "rgba(28, 27, 31, 1)",
              "fontFamily": "OpenSans-SemiBold",
              "fontSize": 16,
              "fontWeight": "600",
              "lineHeight": 20,
            },
          ],
        ],
      ]
    }
    testID="text-wrapper"
  >
    <Text
      style={
        [
          {
            "textAlign": "left",
          },
          {
            "color": "rgba(28, 27, 31, 1)",
            "writingDirection": "ltr",
          },
          [
            {
              "fontFamily": "System",
              "fontSize": 16,
              "fontWeight": "500",
              "letterSpacing": 0.15,
              "lineHeight": 24,
            },
            [
              {
                "color": "rgba(28, 27, 31, 1)",
                "fontFamily": "OpenSans-SemiBold",
                "fontSize": 16,
                "fontWeight": "600",
                "lineHeight": 20,
              },
              undefined,
            ],
          ],
        ]
      }
    >
      2
    </Text>
  </Text>
</View>
`;

exports[`ChannelValue Renders the background color and font color correctly 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
        "maxWidth": "100%",
      },
      undefined,
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "marginRight": 5,
        },
      ]
    }
  >
    <Text
      allowFontScaling={true}
      maxFontSizeMultiplier={100}
      selectable={false}
      style={
        [
          {
            "color": "red",
            "fontSize": 16,
          },
          {},
          {
            "fontFamily": "Material Design Icons",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          {},
        ]
      }
    >
      󰄫
    </Text>
  </View>
  <Text
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      [
        {
          "textAlign": "left",
        },
        {
          "color": "rgba(28, 27, 31, 1)",
          "writingDirection": "ltr",
        },
        [
          {
            "fontFamily": "System",
            "fontSize": 16,
            "fontWeight": "500",
            "letterSpacing": 0.15,
            "lineHeight": 24,
          },
          [
            {
              "color": "rgba(28, 27, 31, 1)",
              "fontFamily": "OpenSans-SemiBold",
              "fontSize": 16,
              "fontWeight": "600",
              "lineHeight": 20,
            },
          ],
        ],
      ]
    }
    testID="text-wrapper"
  >
    <Text
      style={
        [
          {
            "textAlign": "left",
          },
          {
            "color": "rgba(28, 27, 31, 1)",
            "writingDirection": "ltr",
          },
          [
            {
              "fontFamily": "System",
              "fontSize": 16,
              "fontWeight": "500",
              "letterSpacing": 0.15,
              "lineHeight": 24,
            },
            [
              {
                "color": "rgba(28, 27, 31, 1)",
                "fontFamily": "OpenSans-SemiBold",
                "fontSize": 16,
                "fontWeight": "600",
                "lineHeight": 20,
              },
              undefined,
            ],
          ],
        ]
      }
    >
      50
    </Text>
    <Text
      style={
        [
          {
            "textAlign": "left",
          },
          {
            "color": "rgba(28, 27, 31, 1)",
            "writingDirection": "ltr",
          },
          [
            {
              "fontFamily": "System",
              "fontSize": 16,
              "fontWeight": "500",
              "letterSpacing": 0.15,
              "lineHeight": 24,
            },
            [
              {
                "color": "rgba(28, 27, 31, 1)",
                "fontSize": 16,
                "lineHeight": 20,
              },
              {
                "fontFamily": "OpenSans-Light",
                "fontWeight": "300",
              },
              undefined,
            ],
          ],
        ]
      }
    >
      %
    </Text>
  </Text>
</View>
`;
